fix remove scrollbar safari

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,10 +3,10 @@
    ========================================================================== */
 * { box-sizing: border-box; }
 
-html {
+html, body {
   scrollbar-width: none;
   -ms-overflow-style: none;
-  &::-webkit-scrollbar { display: none; }
+  &::-webkit-scrollbar { width: 0; height: 0; display: none; }
 }
 
 body {
